examples/good/3-basic-if-else.afl
n::Int ;

pred::Bool ;

Let n = (((((2)+(2))%(1000000007))^(6))/(2)) ;

Let pred = (((True)&&(!(False)))||((False)^^(False))) ;

main :: Int ;

Let main = (if (pred) then (n) else (-(1))) ;